# localflow

./: README.md  SPEC.md  pyproject.toml  setup.sh
localflow/: app.py  audio.py  cleanup.py  cli.py  config.py  hotkey.py  inject.py  log.py  meetings.py  menubar.py  server.py  sounds.py  state.py  stt.py  symbols.py  workprompts.py
localflow/static/: index.html
wisper/: PROGRESS.md
