[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "localflow"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "faster-whisper",
    "sounddevice",
    "numpy",
    "pynput",
    "pyperclip",
    "requests",
    "fastapi",
    "uvicorn",
    "python-multipart",
]

[project.optional-dependencies]
mlx = ["mlx-whisper"]

[project.scripts]
localflow = "localflow.app:main"
localflow-server = "localflow.server:main"

[tool.hatch.build.targets.wheel]
packages = ["localflow"]
